@@ -1,24 +1,23 @@
 package com.giftforyoube.donation.controller;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
-import com.giftforyoube.donation.dto.DonationInfoDto;
+import com.giftforyoube.donation.dto.GetDonationInfoResponseDto;
+import com.giftforyoube.donation.dto.GetDonationRankingResponseDto;
 import com.giftforyoube.donation.dto.ReadyDonationRequestDto;
 import com.giftforyoube.donation.dto.ReadyDonationResponseDto;
 import com.giftforyoube.donation.service.DonationService;
 import com.giftforyoube.global.exception.BaseResponse;
 import com.giftforyoube.global.exception.BaseResponseStatus;
 import com.giftforyoube.global.security.UserDetailsImpl;
-import jakarta.servlet.http.HttpServletResponse;
 import jakarta.servlet.http.HttpSession;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.web.bind.annotation.*;
 
-import java.io.IOException;
-import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URL;
 
 @RestController
 @RequestMapping("/api")
@@ -32,43 +31,59 @@ public class DonationRestController {
         this.session = session;
     }
 
-    // 1. 후원 준비
-    @PostMapping("/funding/{fundingId}/donation/ready")
-    public ResponseEntity<ReadyDonationResponseDto> readyDonation(@PathVariable Long fundingId,
-                                                                  @RequestBody ReadyDonationRequestDto readyDonationRequestDto) throws JsonProcessingException {
-        ReadyDonationResponseDto readyDonationResponseDto = donationService.readyDonation(readyDonationRequestDto);
-        session.setAttribute("fundingId", fundingId); // TEST
-        session.setAttribute("sponsorNickname", readyDonationRequestDto.getSponsorNickname());
-        session.setAttribute("comment", readyDonationRequestDto.getComment());
-        session.setAttribute("tid", readyDonationResponseDto.getTid());
-        return new ResponseEntity<>(readyDonationResponseDto, HttpStatus.OK);
+    @Value("${giftipie.redirect.url}")
+    private String giftipieRedirectUrl;
+
+    // 1. 후원 랭킹조회
+    @GetMapping("/funding/{Id}/donation")
+    public ResponseEntity<BaseResponse<GetDonationRankingResponseDto>> getDonationRanking(@PathVariable("Id") Long id) {
+        GetDonationRankingResponseDto getDonationRankingResponseDto = new GetDonationRankingResponseDto(donationService.getDonationRanking(id));
+        BaseResponse<GetDonationRankingResponseDto> baseResponse = new BaseResponse<>(BaseResponseStatus.SUCCESS, getDonationRankingResponseDto); // 2000
+        return ResponseEntity.status(HttpStatus.OK).body(baseResponse); // 200
     }
 
-    // 2-1. 후원 승인
+    // 2. 후원 결제준비
+    @PostMapping("/funding/{id}/donation/ready")
+    public ResponseEntity<BaseResponse<ReadyDonationResponseDto>> readyDonation(@PathVariable Long id,
+                                                                                @RequestBody ReadyDonationRequestDto readyDonationRequestDto) {
+        ReadyDonationResponseDto readyDonationResponseDto = donationService.readyDonation(readyDonationRequestDto);
+        session.setAttribute("fundingId", id);
+        session.setAttribute("sponsorNickname", readyDonationRequestDto.getSponsorNickname());
+        session.setAttribute("sponsorComment", readyDonationRequestDto.getSponsorComment());
+        session.setAttribute("tid", readyDonationResponseDto.getTid());
+
+        BaseResponse<ReadyDonationResponseDto> baseResponse = new BaseResponse<>(BaseResponseStatus.DONATION_READY_SUCCESS, readyDonationResponseDto); // 2000
+        return ResponseEntity.status(HttpStatus.OK).body(baseResponse); // 200
+    }
+
+    // 3-1. 후원 결제승인
     @GetMapping("/donation/approve")
-    public ResponseEntity<BaseResponse<DonationInfoDto>> approveDonation(@RequestParam("pg_token") String pgToken,
-                                                                         @AuthenticationPrincipal UserDetailsImpl userDetails) throws JsonProcessingException, MalformedURLException, URISyntaxException {
+    public ResponseEntity<BaseResponse<GetDonationInfoResponseDto>> approveDonation(@RequestParam("pg_token") String pgToken,
+                                                                                    @AuthenticationPrincipal UserDetailsImpl userDetails) throws JsonProcessingException, URISyntaxException {
         String tid = (String) session.getAttribute("tid");
         String sponsorNickname = (String) session.getAttribute("sponsorNickname");
-        String comment = (String) session.getAttribute("comment");
+        String sponsorComment = (String) session.getAttribute("sponsorComment");
         Long fundingId = (Long) session.getAttribute("fundingId");
-        DonationInfoDto donationInfoDto = donationService.approveDonation(tid, pgToken, sponsorNickname, comment, fundingId, userDetails);
+        GetDonationInfoResponseDto getDonationInfoResponseDto = donationService.approveDonation(tid, pgToken, sponsorNickname, sponsorComment, fundingId, userDetails);
 
-        BaseResponse<DonationInfoDto> baseResponse = new BaseResponse<>(BaseResponseStatus.DONATION_SUCCESS, donationInfoDto);
-        return ResponseEntity.status(HttpStatus.FOUND) // 302
-                .location(new URL("https://www.giftipie.me/").toURI())
-                .body(baseResponse); // 2000
+//        String redirectUrl = giftipieRedirectUrl + "fundingdetail/" + fundingId;
+        BaseResponse<GetDonationInfoResponseDto> baseResponse = new BaseResponse<>(BaseResponseStatus.DONATION_APPROVE_SUCCESS, getDonationInfoResponseDto); // 2000
+        return ResponseEntity.status(HttpStatus.FOUND)
+//                .location(new URI(redirectUrl))
+                .body(baseResponse); // 302
     }
 
-    // 2-2. 후원 실패
+    // 3-2. 후원 결제실패
     @GetMapping("/donation/fail")
-    public void failDonation(HttpServletResponse httpServletResponse) throws IOException {
-        httpServletResponse.sendRedirect("https://www.giftipie.me/donation/fail"); // TBD
+    public ResponseEntity<BaseResponse> failDonation() {
+        BaseResponse<Void> baseResponse = new BaseResponse<>(BaseResponseStatus.DONATION_FAIL); // 4000
+        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(baseResponse); // 400
     }
 
-    // 2-3. 후원 취소
+    // 3-3. 후원 결제취소
     @GetMapping("/donation/cancel")
-    public void cancelDonation(HttpServletResponse httpServletResponse) throws IOException {
-        httpServletResponse.sendRedirect("https://www.giftipie.me/donation/cancel"); // TBD
+    public ResponseEntity<BaseResponse> cancelDonation() {
+        BaseResponse<Void> baseResponse = new BaseResponse<>(BaseResponseStatus.DONATION_CANCEL); // 4000
+        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(baseResponse); // 400
     }
 }
